@@ -1938,6 +1938,9 @@ by \kbd{y} and stores the remainder into \kbd{hiremainder}. An error occurs
 if the quotient cannot be represented by an \kbd{ulong}, i.e.~if initially
 $\kbd{hiremainder}\ge\kbd{y}$.
 
+\fun{long}{hammingl}{ulong x)} returns the Hamming weight of $x$, i.e.~the
+number of non-zero bits in its binary expansion.
+
 \misctitle{Obsolete routines} Those functions are awkward and no longer used;
 they are only provided for backward compatibility:
 
@@ -7374,6 +7377,11 @@ is a square \kbd{ZM} and $\kbd{n}\geq 0$.
 \fun{GEN}{ZM_det}{GEN M} if \kbd{M} is a \kbd{ZM}, returns the determinant of
 $M$. This is the function underlying \tet{matdet} whenever $M$ is a \kbd{ZM}.
 
+\fun{GEN}{ZM_permanent}{GEN M} if \kbd{M} is a \kbd{ZM}, returns its
+permanent. This is the function underlying \tet{matpermanent} whenever $M$
+is a \kbd{ZM}. It assumes that the matrix is square of dimension $<
+\kbd{BITS\_IN\_LONG}$.
+
 \fun{GEN}{ZM_detmult}{GEN M} if \kbd{M} is a \kbd{ZM}, returns a multiple of
 the determinant of the lattice generated by its columns. This is the function
 underlying \tet{detint}.
@@ -7508,6 +7516,10 @@ $0$ otherwise.
 \fun{GEN}{zero_zv}{long n} as \kbd{zero\_Flv}.
 
 \fun{GEN}{zm_row}{GEN A, long x0} as \kbd{Flm\_row}.
+
+\fun{GEN}{zm_permanent}{GEN M} return the permanent of $M$.
+The function assumes that the matrix is square of dimension
+$< \kbd{BITS\_IN\_LONG}$.
 
 \fun{int}{zvV_equal}{GEN x, GEN y} returns $1$ if the two \kbd{zvV} (vectors
 of \kbd{zv}) are equal and $0$ otherwise.
@@ -7694,6 +7706,9 @@ but for a $1$ at position $i$.
 
 \fun{int}{RgM_is_ZM}{GEN x} return 1 if the \typ{MAT}~$x$ has only
 \typ{INT} coefficients, and 0 otherwise.
+
+\fun{int}{RgM_is_ZM}{GEN x} return 1 if the \typ{MAT}~$x$ has only
+\typ{INT} or \typ{FRAC} coefficients, and 0 otherwise.
 
 \fun{long}{RgV_isin}{GEN v, GEN x} return the first index $i$ such that
 $v[i] = x$ if it exists, and $0$ otherwise. Naive search in linear time, does
@@ -12645,6 +12660,9 @@ where \kbd{u} and \kbd{v} agree.
 \fun{long}{vecsmall_pack}{GEN v, long base, long mod} handles the
 \typ{VECSMALL} \kbd{v} as the digit of a number in base \kbd{base} and return
 this number modulo \kbd{mod}. This can be used as an hash function.
+
+\fun{GEN}{vecsmall_prod}{GEN v} given a \typ{VECSMALL} \kbd{v}, return
+the product of its entries.
 
 \subsec{Vectors of \typ{VECSMALL}}
 These functions manipulate vectors of \typ{VECSMALL} (vecvecsmall).
