@@ -1,0 +1,15 @@
+1
+a
+1
+(j*e + h*f)*a + ((j*d + g*f)*b + (h*d + g*e)*c)
+450
+225/4
+450.00000000000000000000000000000000000
+2432902008176640000
+5923651457692698111014016643988523721001231402487426778059781745358246359177
+62560000
+3083006079469106283548010402121540337574621576466658968216372244601693632059
+0710729600180853543474258186192116072131181104815025761774130562338354193365
+1962372270527617850320061887552530356998486431159949171842025616672790485876
+08238404756881640802750401375601950720000000
+Total time spent: 3116
